<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:expandedTitleMarginBottom="60dp"
            app:expandedTitleMarginStart="60dp"
            app:collapsedTitleTextAppearance="@style/collapsedText"
            app:expandedTitleTextAppearance="@style/expandedText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/my_todo"
            app:titleCollapseMode="scale">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <ImageButton
                android:id="@+id/todo_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:minHeight="48dp"
                android:paddingBottom="20dp"
                android:src="@drawable/visible" />

            <TextView
                android:id="@+id/done_count_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="60dp"
                android:scaleType="centerCrop"
                android:paddingBottom="20dp"
                android:text="@string/completed_counter"
                android:textColor="@color/label_tertiary"
                android:textSize="16sp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_todo_not_complete" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/color_blue"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add"
        app:tint="@color/color_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>